// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the EditButton component. Should match snapshot - type === "button". 1`] = `
<div>
  <div
    class="Toastify"
  />
  <button
    class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
    data-testid="edit-button"
    type="button"
  >
    <svg
      class="inline pb-0.5"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 20h9"
      />
      <path
        d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
      />
    </svg>
    <span
      class="text-sm px-1"
    >
      Edit
    </span>
  </button>
</div>
`;

exports[`Unit test for the EditButton component. Should match snapshot - type === "link". 1`] = `
<div>
  <div
    class="Toastify"
  />
  <a
    class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
    data-testid="edit-link"
    href="http://test/"
  >
    <svg
      class="inline pb-0.5"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 20h9"
      />
      <path
        d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
      />
    </svg>
    <span
      class="text-sm px-1"
    >
      Edit
    </span>
  </a>
</div>
`;
